<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.sb.scrapecast.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show_queue"
        android:icon="@drawable/ic_playlist_white_24dp"
        android:title="@string/show_queue"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_home"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_exit"
        android:visible="false"
        app:showAsAction="never" />

</menu>
